deploy/apps/home-assistant/core/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  hostnames:
  - home-assistant
  parentRefs:
    - name: cilium
      namespace: gateway
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
